"revise package structure, router and resource handler"