@@ -4,6 +4,7 @@ import common.Response;
 import common.MimeUtil;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -11,24 +12,24 @@ import java.nio.file.Paths;
 
 public class ResourceHandler {
 
-    private static final String STATIC_ROOT = "/static";  // 对应 resources/static
+    private static final String STATIC_ROOT = "/static"; // 对应 resources/static
 
     public Response getStaticResource(String path) {
         Response resp = new Response();
         // 安全：禁止向上跳目录
-        if (path.contains("..")) return new404();
+        if (path.contains(".."))
+            return new404();
 
         // 去 classpath 下读文件
         URL url = getClass().getResource(STATIC_ROOT + path);
-        if (url == null) return new404();
+        if (url == null)
+            return new404();
 
-        try {
-            Path file = Paths.get(url.toURI());
-            if (!Files.exists(file) || Files.isDirectory(file)) return new404();
-
-            byte[] body = Files.readAllBytes(file);
-            String mime = MimeUtil.fromFilename(file.getFileName().toString());
-
+        try (InputStream in = getClass().getResourceAsStream(STATIC_ROOT + path)) {
+            if (in == null)
+                return new404();
+            byte[] body = in.readAllBytes();
+            String mime = MimeUtil.fromFilename(path.substring(path.lastIndexOf('/') + 1));
             resp.setStatusCode(200);
             resp.setReasonPhrase("OK");
             resp.setHeader("Content-Type", mime);
